tests/error/enum_errors/bad_variant_def1.err
Error: Unexpected statement (at $FILE:6:4)
  | 
4 | @guppy.enum
5 | class MyEnum:
6 |     v1 = 20
  |     ^^^^^^^ Unexpected statement in enum variant definition

Help: enum variant must be of form `VariantName = {"var1": Type1, ...}`

Guppy compilation failed due to 1 previous error
